# INFT2503

./: .gitignore
oving1/: CMakeLists.txt  header.h  main.cpp
oving2/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp
oving3/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_3_test.cpp  task_4.cpp
oving4/: CMakeLists.txt  task_1.cpp  task_2.cpp
oving5/: CMakeLists.txt  chess.cpp
oving6/: CMakeLists.txt  chess.cpp  echo_server.cpp
oving7/: CMakeLists.txt
oving7/fraction/: fraction.cpp  fraction.hpp  main.cpp
oving7/set/: main_set.cpp  set.cpp  set.hpp
oving8/: CMakeLists.txt
oving8/equal/: equal.cpp  equal.hpp  main.cpp
oving8/pair/: main.cpp  pair.cpp  pair.hpp
